Add lagranges theorem and restructure the directories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,2 @@
-[package]
-name = "tcat"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-num="0.2.0"
+[workspace]
+members = ["groups", "theorems"]
